added edit supplier feature added required field error handling (removed errordrawable) reduced font size for warehouse stock display to accommodate large total amount